--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-class-component": "^7.2.3",
     "vue-cookies": "^1.8.2",
     "vue-property-decorator": "^9.1.2",
+    "vue-resize-observer": "^2.0.16",
     "vue-yandex-maps": "^0.10.10",
     "vuex": "^3.6.2",
     "webstomp-client": "^1.2.6",
